--- a/test/fixtures/comments.yml
+++ b/test/fixtures/comments.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  user_id: one
-  post_id: one
+  user: one
+  post: one
   text: MyText
 
 two:
-  user_id: two
-  post_id: two
+  user: two
+  post: two
   text: MyText
